src/driver/ajinextek/AXL(Library)/Delphi/AXC.pas


    // 카운터 모듈의 각 테이블에 설정된 트리거 위치에 대한 허용 오차 범위를 설정한다.
    // dErrorRange  : 지정 축의 Unit단위로 트리거 위치에 대한 허용 오차 범위를 설정
    function AxcTableSetErrorRange (lModuleNo : LongInt; lTablePos : LongInt; dErrorRange : Double) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 설정된 트리거 위치에 대한 허용 오차 범위를 확인한다.
    function AxcTableGetErrorRange (lModuleNo : LongInt; lTablePos : LongInt; dpErrorRange : PDouble) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 설정된 정보로(트리거 출력 Port, 트리거 펄스 폭) 트리거를 1개 발생시킨다.
    // ※ 주의 : 1) 트리거가 Disable되어 있으면 이 함수는 자동으로 Enable시켜 트리거를 발생시킴
    //           2) Trigger Mode가 HPC4_PATTERN_TRIGGER 모드일 경우 이 함수는 자동으로 트리거 모드를 HPC4_RANGE_TRIGGER로 변경 함(하나의 트리거만 발생시키기 위해)
    function AxcTableTriggerOneShot (lModuleNo : LongInt; lTablePos : LongInt) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 설정된 정보로(트리거 출력 Port, 트리거 펄스 폭), 지정한 개수만큼 설정한 주파수로 트리거를 발생시킨다.
    // lTriggerCount     : 지정한 주파수를 유지하며 발생시킬 트리거 출력 개수
    // uTriggerFrequency : 트리거를 발생시킬 주파수
    // ※ 주의 : 1) 트리거가 Disable되어 있으면 이 함수는 자동으로 Enable시켜 패턴을 가진 트리거를 발생시킴
    //           2) Trigger Mode가 HPC4_PATTERN_TRIGGER 모드가 아닐 경우 이 함수는 자동으로 트리거 모드를 HPC4_PATTERN_TRIGGER로 변경 함
    function AxcTableTriggerPatternShot (lModuleNo : LongInt; lTablePos : LongInt; lTriggerCount : LongInt; uTriggerFrequency : DWord) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 설정된 패턴 트리거 설정 정보를(주파수, 카운터) 확인한다.
    function AxcTableGetPatternShotData (lModuleNo : LongInt; lTablePos : LongInt; lpTriggerCount : PLongInt; upTriggerFrequency : PDWord) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 트리거를 출력하는 방식을 설정한다.
    // uTrigMode : 트리거를 출력하는 방식을 설정한다.
    //   [0] HPC4_RANGE_TRIGGER   : 지정한 트리거 위치에 설정한 허용 범위안에 위치할 때 트리거를 출력하는 모드
    //   [1] HPC4_VECTOR_TRIGGER  : 지한 트리거 위치에 설정한 허용 범위와 벡터 방향이 일치할 때 트리거를 출력하는 모드
    //   [3] HPC4_PATTERN_TRIGGER : 위치와 무관하게 지정한 개수만큼 설정한 주파수로 트리거를 출력하는 모드
    function AxcTableSetTriggerMode (lModuleNo : LongInt; lTablePos : LongInt; uTrigMode : DWord) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 설정된 트리거를 출력하는 방식을 확인한다
    function AxcTableGetTriggerMode (lModuleNo : LongInt; lTablePos : LongInt; upTrigMode : PDWord) : DWord; stdcall;
    // 카운터 모듈의 각 테이블 별로 출력된 누적 트리거 갯수를 초기화 한다.
    function AxcTableSetTriggerCountClear (lModuleNo : LongInt; lTablePos : LongInt) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 2-D 절대위치에서 트리거 신호를 출력하기 위해 필요한 정보를 설정한다.
    // lTriggerDataCount : 설정 할 트리거 정보의 전체 개수
    //   [-1, 0]         : 등록된 트리거 정보 데이타 초기화
    // dpTriggerData     : 2-D 절대위치 트리거 정보(해당 배열의 개수는 lTriggerDataCount * 2가 되어야됨)
    //   *[0, 1]         : X[0], Y[0]
    // lpTriggerCount    : 입력한 2-D 절대 트리거 위치에서 트리거 조건 만족 시 발생시킬 트리거 갯수를 배열로 설정(해당 배열의 개수는 lTriggerDataCount)
    // dpTriggerInterval : TriggerCount 만큼 연속해서 트리거를 발생시킬때 유지 할 간격을 주파수 단위로 설정(해당 배열의 개수는 lTriggerDataCount)
    // ※주의 :
    //    1) 각 전달인자의 배열 개수를 주의하여 사용해야됩니다. 내부에서 사용되는 인자 보다 적은 배열을 지정하면 메모리 참조 오류가 발생 될 수 있음.
    //    2) Trigger Mode는 HPC4_RANGE_TRIGGER로 자동 변경됨
    //    3) 함수 내부에서 Trigger를 Disable한 후 모든 설정을 진행하며 완료 후 다시 Enable 시킴
    function AxcTableSetTriggerData (lModuleNo : LongInt; lTablePos : LongInt; lTriggerDataCount : LongInt; dpTriggerData : PDouble; lpTriggerCount : PLongInt; dpTriggerInterval : PDouble) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 트리거 신호를 출력하기 위해 설정한 트리거 설정 정보를 확인한다.
    // ※ 주의 : 각 테이블에 등록된 최대 트리거 데이타 개수를 모를 때는 아래와 같이 트리거 데이타 개수를 미리 파악한 후 사용하십시요.
    // Ex)      1) AxcTableGetTriggerData(lModuleNo, lTablePos, &lTriggerDataCount, NULL, NULL, NULL);
    //          2) dpTriggerData     = new double[lTriggerDataCount * 2];
    //          3) lpTriggerCount    = new long[lTriggerDataCount];
    //          4) dpTriggerInterval = new double[lTriggerDataCount];
    function AxcTableGetTriggerData (lModuleNo : LongInt; lTablePos : LongInt; lpTriggerDataCount : PLongInt; dpTriggerData : PDouble; lpTriggerCount : PLongInt; dpTriggerInterval : PDouble) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 2-D 절대위치에서 트리거 신호를 출력하기 위해 필요한 정보를 AxcTableSetTriggerData함수와 다른 방식으로 설정한다.
    // lTriggerDataCount : 설정 할 트리거 정보의 전체 개수
    // uOption : dpTriggerData 배열의 데이타 입력 방식을 지정
    //   [0]   : dpTriggerData 배열에 X Pos[0], Y Pos[0], X Pos[1], Y Pos[1] 순서로 입력
    //   [1]   : dpTriggerData 배열에 X Pos[0], Y Pos[0], Count, Inteval, X Pos[1], Y Pos[1], Count, Inteval 순서로 입력
    // ※주의 :
    //    1) dpTriggerData의 배열 개수를 주의하여 사용해야됩니다. 내부에서 사용되는 인자 보다 적은 배열을 지정하면 메모리 참조 오류가 발생 될 수 있음.
    //    2) Trigger Mode는 HPC4_RANGE_TRIGGER로 자동 변경됨
    //    3) 함수 내부에서 Trigger를 Disable한 후 모든 설정을 진행하며 완료 후 다시 Enable 시킴
    function AxcTableSetTriggerDataEx (lModuleNo : LongInt; lTablePos : LongInt; lTriggerDataCount : LongInt; uOption : DWord; dpTriggerData : PDouble) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 트리거 신호를 출력하기 위해 설정한 트리거 설정 정보를 확인한다.
    // ※ 주의 : 각 테이블에 등록된 최대 트리거 데이타 개수를 모를 때는 아래와 같이 트리거 데이타 개수를 미리 파악한 후 사용.
    // Ex)      1) AxcTableGetTriggerDataEx(lModuleNo, lTablePos, &lTriggerDataCount, &uOption, NULL);
    //          2) if(uOption == 0) : dpTriggerData     = new double[lTriggerDataCount * 2];
    //          3) if(uOption == 1) : dpTriggerData     = new double[lTriggerDataCount * 4];
    //          4) dpTriggerInterval = new double[lTriggerDataCount];
    function AxcTableGetTriggerDataEx (lModuleNo : LongInt; lTablePos : LongInt; lpTriggerDataCount : PLongInt; upOption : PDWord; dpTriggerData : PDouble) : DWord; stdcall;

    // 카운터 모듈의 지정한 테이블에 설정된 모든 트리거 데이타와 H/W FIFO의 데이타를 모두 삭제한다.
    function AxcTableSetTriggerDataClear (lModuleNo : LongInt; lTablePos : LongInt) : DWord; stdcall;

    // 카운터 모듈의 지정한 테이블의 트리거 출력 기능을 동작시킴.
    // uEnable : 트리거를 출력 기능의 사용여부를 설정
    // ※ 주의 : 1) 트리거 출력 중 DISABLE하면 출력이 바로 멈춤
    //           2) AxcTableTriggerOneShot, AxcTableGetPatternShotData,AxcTableSetTriggerData, AxcTableGetTriggerDataEx 함수 호출시 자동으로 ENABLE됨
    function AxcTableSetEnable (lModuleNo : LongInt; lTablePos : LongInt; uEnable : DWord) : DWord; stdcall;
    // 카운터 모듈의 지정한 테이블의 트리거 출력 기능의 동작 여부를 확인함.
    function AxcTableGetEnable (lModuleNo : LongInt; lTablePos : LongInt; upEnable : PDWord) : DWord; stdcall;

    // 카운터 모듈의 지정한 테이블을 이용해 발생된 트리거 개수를 확인.
    // lpTriggerCount : 현재까지 출력된 트리거 출력 개수를 반환, AxcTableSetTriggerCountClear 함수로 초기화
    function AxcTableReadTriggerCount (lModuleNo : LongInt; lTablePos : LongInt; lpTriggerCount : PLongInt) : DWord; stdcall;

    // 카운터 모듈의 지정한 테이블에 할당된 H/W 트리거 데이타 FIFO의 상태를 확인.
    // lpCount1[0~500] : 2D 트리거 위치 데이타 중 첫번째(X) 위치를 저정하고 있는 H/W FIFO에 입력된 데이타 개수
    // upStatus1 : 2D 트리거 위치 데이타 중 첫번째(X) 위치를 저정하고 있는 H/W FIFO의 상태
    //   [Bit 0] : Data Empty
    //   [Bit 1] : Data Full
    //   [Bit 2] : Data Valid
    // lpCount2[0~500] : 2D 트리거 위치 데이타 중 두번째(Y) 위치를 저정하고 있는 H/W FIFO에 입력된 데이타 개수
    // upStatus2 : 2D 트리거 위치 데이타 중 두번째(Y) 위치를 저정하고 있는 H/W FIFO의 상태
    //   [Bit 0] : Data Empty
    //   [Bit 1] : Data Full
    //   [Bit 2] : Data Valid
    function AxcTableReadFifoStatus (lModuleNo : LongInt; lTablePos : LongInt; lpCount1 : PLongInt; upStatus1 : PDWord; lpCount2 : PLongInt; upStatus2 : PDWord) : DWord; stdcall;

    // 카운터 모듈의 지정한 테이블에 할당된 H/W 트리거 데이타 FIFO의 현재 위치 데이타값을 확인.
    // dpTopData1 : 2D H/W 트리거 데이타 FIFO의 현재 데이타 중 첫번째(X) 위치 데이타를 확인 함
    // dpTopData1 : 2D H/W 트리거 데이타 FIFO의 현재 데이타 중 두번째(Y) 위치 데이타를 확인 함
    function AxcTableReadFifoData (lModuleNo : LongInt; lTablePos : LongInt; dpTopData1 : PDouble; dpTopData2 : PDouble) : DWord; stdcall;

    ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////



implementation

const
